--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
   },
   "homepage": "https://github.com/dale3h/hue-mqtt-bridge",
   "dependencies": {
+    "app-root-path": "^3.0.0",
+    "cross-env": "^7.0.2",
     "deep-extend": "^0.4.1",
     "equals": "^1.0.5",
     "mqtt": "^1.12.0",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "winston": "^3.2.1"
   }
 }
